--- a/frontend/public/global.css
+++ b/frontend/public/global.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
 }
@@ -8,11 +9,6 @@ body {
   overflow: hidden;
 }
 
-.prose mark:hover {
-  transform: scale(1.1);
-  transition: transform 0.15s;
-}
-
-.prose mark {
-  display: inline-block;
+.journal-viewer .highlighted-hover {
+  background: orange !important;
 }
