--- a/frontend/public/global.css
+++ b/frontend/public/global.css
@@ -12,3 +12,9 @@ body {
 .journal-viewer .highlighted-hover {
   background: orange !important;
 }
+
+.journal-viewer .highlighted {
+    background: #ffd6a8;
+    color: black;
+    border-radius: 5px;
+}
